; ModuleID = '/home/carl/AnghaBench/darwin-xnu/security/extr_mac_alloc.c_mac_zalloc.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/security/extr_mac_alloc.c_mac_zalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@M_WAITOK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @mac_zalloc(i32 %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = load i32, i32* @M_WAITOK, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* %4, align 4
  %11 = call i8* @zalloc(i32 %10)
  store i8* %11, i8** %3, align 8
  br label %15

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = call i8* @zalloc_noblock(i32 %13)
  store i8* %14, i8** %3, align 8
  br label %15

15:                                               ; preds = %12, %9
  %16 = load i8*, i8** %3, align 8
  ret i8* %16
}

declare dso_local i8* @zalloc(i32) #1

declare dso_local i8* @zalloc_noblock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
